Tue Apr  6 18:51:42 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/dds/DDS_Event_Connector_T.cpp:
        * connectors/dds4ccm/impl/dds/DDS_State_Connector_T.cpp:
          Prevented memory leak by using xxx_var variables and
          then test whether they're nil.

        * connectors/dds4ccm/tests/ListenManyByMany/Connector/LMBM_Test_Connector.idl:
        * connectors/dds4ccm/tests/ListenManyByMany/Receiver/LMBM_Test_Receiver.idl:
        * connectors/dds4ccm/tests/ListenManyByMany/Receiver/LMBM_Test_Receiver_exec.h:
        * connectors/dds4ccm/tests/ListenManyByMany/Receiver/LMBM_Test_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/ListenManyByMany/Sender/LMBM_Test_Sender.idl:
        * connectors/dds4ccm/tests/ListenManyByMany/Sender/LMBM_Test_Sender_exec.h:
        * connectors/dds4ccm/tests/ListenManyByMany/Sender/LMBM_Test_Sender_exec.cpp:
        * connectors/dds4ccm/tests/ListenManyByMany/descriptors/Plan.cdp:
          Moved Connector declaration to the ListenManyByMany module.
          Also resolved test errors.

        * connectors/dds4ccm/tests/ListenOneByOne/Connector/LOBO_Test_Connector.idl:
        * connectors/dds4ccm/tests/ListenOneByOne/Receiver/LOBO_Test_Receiver.idl:
        * connectors/dds4ccm/tests/ListenOneByOne/Receiver/LOBO_Test_Receiver_exec.h:
        * connectors/dds4ccm/tests/ListenOneByOne/Receiver/LOBO_Test_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/ListenOneByOne/Sender/LOBO_Test_Sender.idl:
        * connectors/dds4ccm/tests/ListenOneByOne/Sender/LOBO_Test_Sender_exec.h:
        * connectors/dds4ccm/tests/ListenOneByOne/descriptors/Plan.cdp:
          Moved Connector declaration to the ListenOneByOne module.
          Also resolved test errors.

Tue Apr  6 13:53:12 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Containers/Container_Base.h:
        * ciao/Containers/Session/Session_Container.cpp:
        * ciao/Containers/Session/Session_Container.h: