@@ -1,3 +1,8 @@
+Wed Apr  7 06:14:17 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * connectors/dds4ccm/impl/dds/DDS_State_Connector_T.cpp:
+          Resolved compile errors.
+
 Tue Apr  6 18:51:42 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * connectors/dds4ccm/impl/dds/DDS_Event_Connector_T.cpp:
